G1: fatal error: acquiring lock SATB_Q_FL_lock/1 out of order with lock tty_lock/0

XMLWordPrintable

    • gc
    • 12
    • b24
    • Verified

        I got this running last nights debug build on my WS, I built this myself, not a promo build.

        # Run progress: 0.00% complete, ETA 00:03:40
        # Fork: 1 of 1
        # Preparing profilers: LinuxPerfAsmProfiler
        # Profilers consume stdout and stderr from target VM, use -v EXTRA to copy to console
        # Warmup Iteration 1: <forked VM failed with exit code 134>
        <stdout last='20 lines'>
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/mutex.cpp:1316
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/home/eric/tmp/jenkins/workspace/Build-jdk-hs-DEBUG-nightly-with-AOT-Dell/jdk/open/src/hotspot/share/runtime/mutex.cpp:1316), pid=17767, tid=17870
        # fatal error: acquiring lock SATB_Q_FL_lock/1 out of order with lock tty_lock/0 -- possible deadlock
        #
        # JRE version: Java(TM) SE Runtime Environment (12.0) (slowdebug build 12-internal+0-2018-11-26-0139016.eric...)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (slowdebug 12-internal+0-2018-11-26-0139016.eric..., mixed mode, aot, sharing, tiered, jvmci, jvmci compiler, compressed oops, g1 gc, linux-amd64)
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to /ssd/home/eric/views/renaissance-suite/core.17767)
        #
        # An error report file with more information is saved as:
        # /ssd/home/eric/views/renaissance-suite/hs_err_pid17767.log
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #
        Current thread is 17870
        Dumping core ...
        </stdout>
        <stderr last='20 lines'>

              Assignee:
              Kim Barrett
              Reporter:
              Eric Caspole
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: