8214315: G1: fatal error: acquiring lock SATB_Q_FL_lock/1 out of order with lock tty_lock/0

Add new 'tty' lock rank.

Reviewed-by: eosterlund, tschatzl